# learning-cpp-8-weeks

./: README.md
week01/: README.md
week01/number_analyzer/: CMakeLists.txt
week01/number_analyzer/main/: main.cpp
week01/tasks/: CMakeLists.txt
week02/inventory_manager/: .gitignore  CMakeLists.txt
week02/inventory_manager/include/database/: Database.h
week02/inventory_manager/include/interfaces/: IPerishable.h  IWarrantied.h
week02/inventory_manager/include/managers/: InventoryManager.h
week02/inventory_manager/include/models/: Department.h  InventoryItem.h  PerishableItem.h  Product.h  SKUInventory.h  WarrantyItem.h
week02/inventory_manager/src/: main.cpp
week02/inventory_manager/src/database/: Database.cpp
week02/inventory_manager/src/managers/: InventoryManager.cpp
week02/inventory_manager/src/models/: Department.cpp  InventoryItem.cpp  PerishableItem.cpp  Product.cpp  SKUInventory.cpp  WarrantyItem.cpp
